--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^2.9.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-loader-spinner": "^3.1.14",
     "react-scripts": "3.4.3"
   },
   "scripts": {
